[gd_scene load_steps=4 format=3 uid="uid://djvkn4hjphtcj"]

[ext_resource type="Script" path="res://Scripts/cable.gd" id="1_kqe78"]
[ext_resource type="Script" path="res://addons/ropesim/Rope.gd" id="1_w31fv"]
[ext_resource type="Script" path="res://addons/ropesim/RopeCollisionShapeGenerator.gd" id="2_lvqhp"]

[node name="Cable" type="StaticBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_kqe78")

[node name="RopeCollisionShapeGenerator" type="Node" parent="."]
script = ExtResource("2_lvqhp")
enable = false
rope_path = NodePath("../Rope")

[node name="Rope" type="Node2D" parent="."]
script = ExtResource("1_w31fv")

[node name="WaitBeforeBreaking" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="WaitBeforeBreaking" to="." method="_on_timer_timeout"]
